Back in your corner - Address fixes for UIUX588
corrects address overlap on edit and also puts record code back in
record.less as opposed to forms.

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -640,3 +640,39 @@
   margin: 0 20px 20px 20px;
 }
 
+/* Special treatment for the address fields */
+.record-cell {
+  [class*='address_']:not(.edit) {
+    display: inline-block;
+  }
+  .address_street,
+  .address_country,
+  .address_misc_block /* miscelaneous class for more complex/international address formats */ {
+    width: 100%;
+    clear: both;
+  }
+  :not(.edit) {
+    &.address_city {
+      div:after {
+        content: ",";
+        margin-left: -4px;
+        margin-right: 4px;
+      }
+    }
+  }
+
+  .address_city {
+    .ellipsis_inline:empty:after {
+      content: "";
+    }
+  }
+
+  .address_city,
+  .address_state,
+  .address_zip {
+    &> div.ellipsis_inline {
+      display: inline !important;
+      overflow: visible;
+    }
+  }
+}
